<resources>
    <string name="app_name">KiboFinder</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="camera_image_description">this image is camera button</string>
    <string name="setting_button_description">image setting button</string>

    <string name="camera_fragment_label">Camera Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="map_fragment_label">This is MAP</string>
    <string name="menu_close">Close</string>
    <!-- String used for Setting fragment -->
    <string name="locationLabel">User Location</string>
    <string name="usingGPSLabel">Using GPS</string>
    <string name="label_latitude">Latitude [deg]</string>
    <string name="label_longitude">Longitude [deg]</string>
    <string name="label_altitude">Altitude [m]</string>
    <string name="ok_button">OK</string>
    <string name="cancel_button">Cancel</string>
    <string name="setting_fragment_label">SettingFragment</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="camera_access_required">This Camera Function Requires permission.</string>
    <string name="ok">OK</string>
    <string name="camera_access_denied">Sorry, this function cannot be used without CAMERA permission</string>
    <string name="internet_access_required">we need internet connection to get current position information of ISS</string>
    <string name="internet_access_denied">Sorry, this function request internet connection.</string>
    <string name="gpw_access_required">we need location information by using GPS</string>
    <string name="location_access_denied">sorry, this function cannot work without fine location.</string>
    <string name="action_privacy">Privacy Policy</string>
    <string name="menu_title_information">Information</string>
    <string name="opening_movie_description">set icon</string>
    <string name="start_button_text">Start</string>
    <string name="string_start_button_text">Start</string>
</resources>
