<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.kibofinder.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_privacy"
        android:orderInCategory="100"
        android:title="@string/action_privacy"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_close"
        app:showAsAction="never"
        android:title="@string/menu_close" />
    <item
        android:id="@+id/action_info"
        android:orderInCategory="200"
        android:title="@string/menu_title_information" />
</menu>
