<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/MainFragment"
        android:name="org.braincopy.kibofinder.MainFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_main">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/CameraFragment" />
        <action
            android:id="@+id/action_MainFragment_to_MapFragment"
            app:destination="@id/MapFragment" />
        <action
            android:id="@+id/action_MainFragment_to_SettingFragment"
            app:destination="@id/SettingFragment" />
    </fragment>
    <fragment
        android:id="@+id/CameraFragment"
        android:name="org.braincopy.kibofinder.CameraFragment"
        android:label="@string/camera_fragment_label"
        tools:layout="@layout/fragment_camera">

        <action
            android:id="@+id/action_CameraFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>
    <fragment
        android:id="@+id/MapFragment"
        android:name="org.braincopy.kibofinder.MapFragment"
        android:label="@string/map_fragment_label"
        tools:layout="@layout/fragment_map">

        <action
            android:id="@+id/action_MapFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingFragment"
        android:name="org.braincopy.kibofinder.SettingFragment"
        android:label="@string/setting_fragment_label"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_SettingFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>
</navigation>
